# mmocrl

./: .gitignore  CMakeLists.txt  README.md  package.xml
gyms/student/: CustomNetwork.py  Environment.hpp  cfg.yaml  runner2.py  test_sweep_fps.yaml
gyms/teacher/: CustomNetwork.py  Environment.hpp  cfg.yaml  runner.py  runner2.py  tester.py
include/common/: math.hpp
include/environment/: environment_c100.hpp
include/environment/actuator/: ActuatorModelBase.hpp  ActuatorModelPD.hpp  ActuatorModelPNetwork.hpp
include/environment/command/: Command.hpp  CommandViewer.hpp
include/environment/disturbance/: PushDisturbance.hpp  PushDisturbanceViewer.hpp
include/environment/history/: JointHistory.hpp
include/environment/motion/: FootMotionGenerator.hpp  IK.hpp  ModelParametersA1.hpp  ModelParametersAnymalC100.hpp  ModelParametersBase.hpp
include/environment/observation/: HistoryObservation.hpp  InternalObservation.hpp  NoisyObservation.hpp  PreviledgedObservation.hpp  PrivilegedObservation.hpp  State.hpp  StateBase.hpp
include/environment/scaling/: ScalingAndOffset.hpp
include/environment/terrain/: ContactManager.hpp  LocalTerrainViewer.hpp  Terrain.hpp  TerrainGenerator.hpp
raisimGymTorch/algo/ppo/: module.py
raisimGymTorch/env/: RaisimGymEnv.hpp  RaisimGymVecEnv.py  Reward.hpp  TerrainParticleFilter.hpp  VectorizedEnvironment.hpp  VectorizedEnvironmentTerrainCurriculum.hpp  raisim_gym.cpp
raisimGymTorch/stable_baselines3/: RaisimSbGymVecEnv.py
rsc/robot/a1/urdf/: a1.urdf
rsc/scaling/: action.yaml  state_hist.yaml  test.yaml
test/: test_actuator_model.cpp  test_contacts.cpp  test_disturbance.cpp  test_foot_motion.cpp  test_foot_motion_a1.cpp  test_history_observation.cpp  test_internal_observation.cpp  test_joint_history.cpp  test_privileged_observation.cpp  test_rewards.cpp  test_scaling.cpp  test_terrain_generator.cpp
